bug fix alignment of middle bar

--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,7 @@ main {
 .bg-light {
   background-color: #eef0f2 !important;
 }
+
+.list-style-none {
+  list-style: none;
+}
